--- a/WebFormsEstudo/Site.Master
+++ b/WebFormsEstudo/Site.Master
@@ -51,6 +51,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
+                        <li><a runat="server" href="~/Filmes/CadastrarFilmes.aspx">Cadastrar Filme</a></li>
+                        <li><a runat="server" href="~/Filmes/ListarFilmes.asp">ListarFilmes</a></li>
                         <li><a runat="server" href="~/About">Sobre</a></li>
                         <li><a runat="server" href="~/Contact">Contato</a></li>
                     </ul>
